--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-  "name": "dallanlee/wp-sync-db",
+  "name": "dallanlee/global-content-blocks",
   "type": "wordpress-plugin",
-  "homepage": "https://github.com/dallanlee/wp-sync-db",
+  "version": "2.1.5",
+  "homepage": "https://github.com/dallanlee/global-content-blocks",
   "license": "GPL-2.0",
-  "description": "WP Sync DB eliminates the manual work of migrating a WP database.",
-  "keywords": ["plugin","wordpress","wp-sync-db","db"],
+  "description": "Reusable blocks of code",
+  "keywords": ["plugin","wordpress","reusable code"],
   "require": {
     "php": ">=5.3.7",
     "composer/installers": "~1.5"
